Refactoring Tests Implementation of review findings